// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpcomingMeetups should render correctly 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <UpcomingMeetups
      getUpcomingMeetups={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      meetups={Array []}
    >
      <div>
        <div
          className="d-flex justify-content-center"
        >
          <div
            className="title-tag"
          >
            <p>
              Upcoming Meetups
            </p>
            <div
              className="d-flex justify-content-center"
            >
              <div
                className="dash"
              />
            </div>
          </div>
        </div>
        <div
          className="section group"
        >
          <p>
            No Upcoming meetups
          </p>
        </div>
      </div>
    </UpcomingMeetups>
  </Router>
</BrowserRouter>
`;

exports[`UpcomingMeetups should render correctly with all props 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <UpcomingMeetups
      getUpcomingMeetups={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      meetups={
        Array [
          Object {
            "happening_on": "2020-05-18T21:28:41+0000",
            "id": "fhwjicgyvufbewf",
            "image": "http://dummyinge.jpg",
            "organizer_name": "organizer_name",
            "topic": "topic",
          },
        ]
      }
    >
      <div>
        <div
          className="d-flex justify-content-center"
        >
          <div
            className="title-tag"
          >
            <p>
              Upcoming Meetups
            </p>
            <div
              className="d-flex justify-content-center"
            >
              <div
                className="dash"
              />
            </div>
          </div>
        </div>
        <div
          className="section group"
        >
          <div
            className="col span_1_of_4"
            key="fhwjicgyvufbewf"
          >
            <div
              className="d-flex justify-content-center"
            >
              <div
                className="product-card"
              >
                <Link
                  to="#"
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    <div
                      className="card-image-top"
                    >
                      <Image
                        alt="fr"
                        className="product-image"
                        src="http://dummyinge.jpg"
                      >
                        <img
                          alt="fr"
                          className="product-image"
                          src="http://dummyinge.jpg"
                        />
                      </Image>
                    </div>
                    <div
                      className="product-card-details"
                    >
                      <p
                        className="f-20 "
                      >
                        <b>
                          topic
                        </b>
                      </p>
                      <div
                        className="d-flex justify-content-between mt-1"
                      >
                        <small
                          className="f-12"
                        >
                          <i>
                            organizer_name
                          </i>
                        </small>
                        <p
                          className="text-blue"
                        >
                          18 May 2020
                        </p>
                      </div>
                    </div>
                  </a>
                </Link>
              </div>
            </div>
          </div>
        </div>
      </div>
    </UpcomingMeetups>
  </Router>
</BrowserRouter>
`;

exports[`UpcomingMeetups should render correctly with all props and without image 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <UpcomingMeetups
      getUpcomingMeetups={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      meetups={
        Array [
          Object {
            "happening_on": "2020-05-18T21:28:41+0000",
            "id": "fhwjicgyvufbewf",
            "organizer_name": "organizer_name",
            "topic": "topic",
          },
        ]
      }
    >
      <div>
        <div
          className="d-flex justify-content-center"
        >
          <div
            className="title-tag"
          >
            <p>
              Upcoming Meetups
            </p>
            <div
              className="d-flex justify-content-center"
            >
              <div
                className="dash"
              />
            </div>
          </div>
        </div>
        <div
          className="section group"
        >
          <div
            className="col span_1_of_4"
            key="fhwjicgyvufbewf"
          >
            <div
              className="d-flex justify-content-center"
            >
              <div
                className="product-card"
              >
                <Link
                  to="#"
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    <div
                      className="card-image-top"
                    >
                      <Image
                        alt="fr"
                        className="product-image"
                        src="https://react.semantic-ui.com/images/wireframe/image.png"
                      >
                        <img
                          alt="fr"
                          className="product-image"
                          src="https://react.semantic-ui.com/images/wireframe/image.png"
                        />
                      </Image>
                    </div>
                    <div
                      className="product-card-details"
                    >
                      <p
                        className="f-20 "
                      >
                        <b>
                          topic
                        </b>
                      </p>
                      <div
                        className="d-flex justify-content-between mt-1"
                      >
                        <small
                          className="f-12"
                        >
                          <i>
                            organizer_name
                          </i>
                        </small>
                        <p
                          className="text-blue"
                        >
                          18 May 2020
                        </p>
                      </div>
                    </div>
                  </a>
                </Link>
              </div>
            </div>
          </div>
        </div>
      </div>
    </UpcomingMeetups>
  </Router>
</BrowserRouter>
`;
